# serializer version: 1
# name: TestFba2xGenerator.test_generate
  tuple(
    list([
      '/usr/bin/fba2x',
      '--configfile',
      '/userdata/system/configs/fba/fba2x.cfg',
      '--logfile',
      '/userdata/system/logs/fba2x.log',
      '/userdata/roms/neogeo/rom.zip',
    ]),
    dict({
    }),
  )
# ---
# name: TestFba2xGenerator.test_generate[config]
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_config[{'ratio': '16/9'}]
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 1
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_config[{'ratio': '4/3'}]
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_config[{'ratio': 'full'}]
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_config[{'shaders': 'foo'}]
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_config[{'shaders': 'scanlines'}]
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 1
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_config[{'smooth': '0'}]
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_config[{'smooth': '1'}]
  '''
  [Graphics]
  DisplaySmoothStretch = 1
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_controllers
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = 1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  L_1 = 0
  Y_1 = 1
  X_1 = 2
  A_1 = 3
  B_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  L_2 = 1
  Y_2 = 0
  X_2 = 2
  A_2 = 3
  B_2 = 4
  R_2 = 5
  START_2 = 7
  SELECT_2 = 6
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_existing
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Foo]
  Bar = 2
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  Y_1 = 0
  X_1 = 1
  B_1 = 2
  A_1 = 3
  L_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_generate_six_button_game
  '''
  [Graphics]
  DisplaySmoothStretch = 0
  MaintainAspectRatio = 0
  DisplayEffect = 0
  RotateScreen = 0
  DisplayBorder = 0
  
  [Joystick]
  SDLID_1 = 0
  SDLID_2 = -1
  SDLID_3 = -1
  SDLID_4 = -1
  JA_UD_1 = 1
  JA_LR_1 = 0
  L_1 = 0
  Y_1 = 1
  X_1 = 2
  A_1 = 3
  B_1 = 4
  R_1 = 5
  START_1 = 9
  SELECT_1 = 8
  QUIT = 9
  HOTKEY = 8
  
  
  '''
# ---
# name: TestFba2xGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
    }),
    'name': 'fba2x',
  })
# ---
